docs: markdown gen tweaks + headless reorg

--- a/doc/user/data/examples/index_usage/index_usage_key_quantity.yml
+++ b/doc/user/data/examples/index_usage/index_usage_key_quantity.yml
@@ -1,64 +1,59 @@
 # CREATE INDEX idx_orders_view_qty on orders_view (quantity);
-queries:
+columns:
+  - column: query
+    header: Query
+  - column: index_usage
+    header: Index Usage
+rows:
   - query: |
       ```mzsql
       SELECT * FROM orders_view;
       ```
     index_usage: Index scan.
-
   - query: |
       ```mzsql
       SELECT * FROM orders_view WHERE quantity = 10;
       ```
     index_usage: Point lookup.
-
   - query: |
       ```mzsql
       SELECT * FROM orders_view WHERE quantity IN (10, 20);
       ```
     index_usage: Point lookup.
-
   - query: |
       ```mzsql
       SELECT * FROM orders_view WHERE quantity = 10 OR quantity = 20;
       ```
     index_usage: |
       Point lookup. Query uses `OR` to combine conditions on the **same** field.
-
   - query: |
       ```mzsql
       SELECT * FROM orders_view WHERE quantity = 10 AND price = 5.00;
       ```
     index_usage: |
       Point lookup on `quantity`, then filter on `price`.
-
   - query: |
       ```mzsql
       SELECT * FROM orders_view WHERE (quantity, price) = (10, 5.00);
       ```
     index_usage: |
       Point lookup on `quantity`, then filter on `price`.
-
   - query: |
       ```mzsql
       SELECT * FROM orders_view WHERE quantity = 10 OR price = 5.00;
       ```
     index_usage: |
       Index scan. Query uses `OR` to combine conditions on **different** fields.
-
   - query: |
       ```mzsql
       SELECT * FROM orders_view WHERE quantity <= 10;
       ```
     index_usage: Index scan.
-
   - query: |
       ```mzsql
       SELECT * FROM orders_view WHERE round(quantity) = 20;
       ```
     index_usage: Index scan.
-
-
   - query: |
       ```mzsql
       -- Assume quantity is an integer
