--- a/doc/user/data/examples/create_sink_iceberg.yml
+++ b/doc/user/data/examples/create_sink_iceberg.yml
@@ -9,6 +9,7 @@
     )
     USING AWS CONNECTION <aws_connection>
     KEY ( <key_col> [, ...] ) [NOT ENFORCED]
+    ENVELOPE UPSERT
     WITH (COMMIT INTERVAL = '<interval>')
   syntax_elements:
     - name: "`<sink_name>`"
@@ -41,6 +42,9 @@
     - name: "**NOT ENFORCED**"
       description: |
         Disable validation of key uniqueness. Use only when you have outside knowledge that the key is unique.
+    - name: "**ENVELOPE UPSERT**"
+      description: |
+        **Required.** Specifies that the sink uses upsert semantics based on the `KEY`.
     - name: "**COMMIT INTERVAL** `'<interval>'`"
       description: |
         **Required.** How frequently to commit snapshots to Iceberg (e.g., `'10s'`, `'1m'`). See [Commit interval tradeoffs](#commit-interval-tradeoffs).
