--- a/doc/user/data/m1_cc_mapping.yml
+++ b/doc/user/data/m1_cc_mapping.yml
@@ -4,24 +4,26 @@ columns:
 rows:
   - "M.1 Size": "**M.1-nano**"
     "cc Size": "25cc"
-  - "M.1 Size": "**M.1-micro**"
+  - "M.1 Size": "**M.1-nano**"
     "cc Size": "50cc"
-  - "M.1 Size": "**M.1-xsmall**"
+  - "M.1 Size": "**M.1-micro**"
     "cc Size": "100cc"
-  - "M.1 Size": "**M.1-small**"
+  - "M.1 Size": "**M.1-xsmall**"
     "cc Size": "200cc"
+  - "M.1 Size": "**M.1-small**"
+    "cc Size": "300cc or 400cc"
   - "M.1 Size": "**M.1-medium**"
-    "cc Size": "300cc"
+    "cc Size": "600cc or 800cc"
   - "M.1 Size": "**M.1-large**"
-    "cc Size": "400cc"
-  - "M.1 Size": "**M.1-1.5xlarge**"
-    "cc Size": "600cc"
-  - "M.1 Size": "**M.1-2xlarge**"
     "cc Size": "800cc"
-  - "M.1 Size": "**M.1-3xlarge**"
-    "cc Size": "1200cc"
-  - "M.1 Size": "**M.1-4xlarge**"
+  - "M.1 Size": "**M.1-1.5xlarge**"
+    "cc Size": "1200cc or 1600cc"
+  - "M.1 Size": "**M.1-2xlarge**"
     "cc Size": "1600cc"
+  - "M.1 Size": "**M.1-3xlarge**"
+    "cc Size": "3200cc"
+  - "M.1 Size": "**M.1-4xlarge**"
+    "cc Size": "3200cc"
   - "M.1 Size": "**M.1-8xlarge**"
     "cc Size": "3200cc"
   - "M.1 Size": "**M.1-16xlarge**"
