--- a/src/workspace-hack/Cargo.toml
+++ b/src/workspace-hack/Cargo.toml
@@ -87,7 +87,7 @@ libc = { version = "0.2.180", features = ["extra_traits", "use_std"] }
 libz-sys = { version = "1.1.23", features = ["static"] }
 lock_api = { version = "0.4.14", features = ["serde"] }
 log = { version = "0.4.29", default-features = false, features = ["std"] }
-lru = { version = "0.12.5" }
+lru = { version = "0.16.3" }
 memchr = { version = "2.7.6" }
 minimal-lexical = { version = "0.2.1", default-features = false, features = ["std"] }
 moka = { version = "0.12.12", features = ["future", "sync"] }
@@ -236,7 +236,7 @@ libc = { version = "0.2.180", features = ["extra_traits", "use_std"] }
 libz-sys = { version = "1.1.23", features = ["static"] }
 lock_api = { version = "0.4.14", features = ["serde"] }
 log = { version = "0.4.29", default-features = false, features = ["std"] }
-lru = { version = "0.12.5" }
+lru = { version = "0.16.3" }
 memchr = { version = "2.7.6" }
 minimal-lexical = { version = "0.2.1", default-features = false, features = ["std"] }
 moka = { version = "0.12.12", features = ["future", "sync"] }
@@ -328,6 +328,7 @@ openssl-sys = { version = "0.9.111", default-features = false, features = ["vend
 ring = { version = "0.17.14", features = ["std"] }
 rustix-d585fab2519d2d1 = { package = "rustix", version = "0.38.44", features = ["fs", "net", "process", "termios"] }
 rustix-dff4ba8e3ae991db = { package = "rustix", version = "1.0.7", features = ["event", "fs", "pipe", "process", "time"] }
+spin = { version = "0.10.0" }
 tower-http = { version = "0.6.8", default-features = false, features = ["follow-redirect"] }
 
 [target.x86_64-unknown-linux-gnu.build-dependencies]
@@ -344,6 +345,7 @@ openssl-sys = { version = "0.9.111", default-features = false, features = ["vend
 ring = { version = "0.17.14", features = ["std"] }
 rustix-d585fab2519d2d1 = { package = "rustix", version = "0.38.44", features = ["fs", "net", "process", "termios"] }
 rustix-dff4ba8e3ae991db = { package = "rustix", version = "1.0.7", features = ["event", "fs", "pipe", "process", "time"] }
+spin = { version = "0.10.0" }
 tower-http = { version = "0.6.8", default-features = false, features = ["follow-redirect"] }
 
 [target.x86_64-apple-darwin.dependencies]
@@ -357,6 +359,7 @@ ring = { version = "0.17.14", features = ["std"] }
 rustix-d585fab2519d2d1 = { package = "rustix", version = "0.38.44", features = ["fs", "net", "process", "termios"] }
 rustix-dff4ba8e3ae991db = { package = "rustix", version = "1.0.7", features = ["event", "fs", "pipe", "process", "time"] }
 security-framework = { version = "2.10.0", features = ["alpn"] }
+spin = { version = "0.10.0" }
 tower-http = { version = "0.6.8", default-features = false, features = ["follow-redirect"] }
 
 [target.x86_64-apple-darwin.build-dependencies]
@@ -370,6 +373,7 @@ ring = { version = "0.17.14", features = ["std"] }
 rustix-d585fab2519d2d1 = { package = "rustix", version = "0.38.44", features = ["fs", "net", "process", "termios"] }
 rustix-dff4ba8e3ae991db = { package = "rustix", version = "1.0.7", features = ["event", "fs", "pipe", "process", "time"] }
 security-framework = { version = "2.10.0", features = ["alpn"] }
+spin = { version = "0.10.0" }
 tower-http = { version = "0.6.8", default-features = false, features = ["follow-redirect"] }
 
 ### END HAKARI SECTION
