Add a Materialize offerings section heading

--- a/doc/user/data/materialize_intro.yml
+++ b/doc/user/data/materialize_intro.yml
@@ -8,8 +8,8 @@
   content: |
     Materialize is available as:
 
-    | Offering | Description | Get Started |
-    |----------|-------------|-------------|
-    | **Materialize Cloud** | Materialize Cloud is a fully-managed service for Materialize. | 🚀 Sign up for a [free trial account](https://materialize.com/register/?utm_campaign=General&utm_source=documentation) on Materialize Cloud and try out the [Quickstart](/get-started/quickstart/). |
-    | **Materialize Self-Managed** | Deploy and operate Materialize in your Kubernetes environment. Whereas Materialize Cloud gives you a fully managed service, Materialize Self-Managed allows you to deploy Materialize in your own infrastructure.<br><br>{{< include-md file="shared-content/self-managed/editions-available.md" >}} | 🚀 [Install self-managed](/get-started/install/) and try out the [Quickstart](/get-started/quickstart/). |
-    | **Materialize Emulator** | Materialize Emulator is an all-in-one Docker image that provides the fastest way to get hands-on experience with Materialize for local development. | 🚀 [Download and run Materialize Emulator](/get-started/install-materialize-emulator/) and try out the [Quickstart](/get-started/quickstart/). |
+    | Offering | Description | Get Started 🚀  |
+    |----------|-------------|-----------------|
+    | **Materialize Cloud** | Materialize Cloud is a fully-managed service for Materialize. | Sign up for a [free trial account](https://materialize.com/register/?utm_campaign=General&utm_source=documentation) on Materialize Cloud and try out the [Quickstart](/get-started/quickstart/). |
+    | **Materialize Self-Managed** | Deploy and operate Materialize in your Kubernetes environment. Whereas Materialize Cloud gives you a fully managed service, Materialize Self-Managed allows you to deploy Materialize in your own infrastructure.<br><br>{{< include-md file="shared-content/self-managed/editions-available.md" >}} | [Install self-managed](/get-started/install/) and try out the [Quickstart](/get-started/quickstart/). |
+    | **Materialize Emulator** | Materialize Emulator is an all-in-one Docker image that provides the fastest way to get hands-on experience with Materialize for local development. | [Download and run Materialize Emulator](/get-started/install-materialize-emulator/) and try out the [Quickstart](/get-started/quickstart/). |
