FoundationDB metadata storage
Implement a consensus provider and timestamp oracle based on
FoundationDB.

Signed-off-by: Moritz Hoffmann <mh@materialize.com>

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ node_modules
 /test/feature-benchmark/tmp/*.td
 /test/zippy/tmp/*.td
 /test/**/tmp_*.toml
+/test/**/fdb_*.cluster
 junit_*.xml
 parallel-workload-queries.log
 perf.data*
