--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ members = [
     "src/expr-parser",
     "src/expr-test-util",
     "src/fivetran-destination",
+    "src/foundationdb",
     "src/frontegg-auth",
     "src/frontegg-client",
     "src/frontegg-mock",
@@ -165,6 +166,7 @@ default-members = [
     "src/expr-derive-impl",
     "src/expr-parser",
     "src/expr-test-util",
+    "src/foundationdb",
     "src/frontegg-auth",
     "src/frontegg-client",
     "src/frontegg-mock",
