--- a/src/workspace-hack/Cargo.toml
+++ b/src/workspace-hack/Cargo.toml
@@ -66,6 +66,7 @@ event-listener-strategy = { version = "0.5.4" }
 fastrand = { version = "2.3.0" }
 flate2 = { version = "1.1.8", features = ["zlib", "zlib-rs"] }
 form_urlencoded = { version = "1.2.2" }
+foundationdb = { version = "0.10.0", features = ["embedded-fdb-include", "fdb-7_3"] }
 futures-channel = { version = "0.3.31", features = ["sink"] }
 futures-core = { version = "0.3.31" }
 futures-executor = { version = "0.3.31" }
@@ -81,7 +82,7 @@ hashbrown-986da7b5efc2b80e = { package = "hashbrown", version = "0.16.1" }
 hyper-582f2526e08bb6a0 = { package = "hyper", version = "0.14.27", features = ["client", "http1", "http2", "stream", "tcp"] }
 hyper-util = { version = "0.1.19", features = ["client-legacy", "server-auto", "service", "tracing"] }
 insta = { version = "1.45.1", features = ["json"] }
-itertools = { version = "0.10.5" }
+itertools = { version = "0.13.0" }
 jiff = { version = "0.2.18", features = ["serde"] }
 libc = { version = "0.2.180", features = ["extra_traits", "use_std"] }
 libz-sys = { version = "1.1.23", features = ["static"] }
@@ -109,6 +110,7 @@ portable-atomic = { version = "1.13.0", features = ["require-cas"] }
 postgres = { git = "https://github.com/MaterializeInc/rust-postgres", default-features = false, features = ["with-chrono-0_4"] }
 postgres-types = { git = "https://github.com/MaterializeInc/rust-postgres", default-features = false, features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
 predicates = { version = "3.1.3" }
+prettyplease = { version = "0.2.37", default-features = false, features = ["verbatim"] }
 proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
 proptest = { version = "1.9.0" }
 prost = { version = "0.13.5", features = ["no-recursion-limit", "prost-derive"] }
@@ -185,7 +187,7 @@ aws-smithy-types = { version = "1.3.6", default-features = false, features = ["b
 axum = { version = "0.7.9", features = ["ws"] }
 axum-core = { version = "0.4.5", default-features = false, features = ["tracing"] }
 base16ct = { version = "0.2.0", default-features = false, features = ["alloc"] }
-bindgen = { version = "0.72.1", default-features = false, features = ["runtime"] }
+bindgen = { version = "0.72.1" }
 bit-set = { version = "0.8.0" }
 bit-vec = { version = "0.8.0" }
 brotli = { version = "8.0.2" }
@@ -215,6 +217,7 @@ event-listener-strategy = { version = "0.5.4" }
 fastrand = { version = "2.3.0" }
 flate2 = { version = "1.1.8", features = ["zlib", "zlib-rs"] }
 form_urlencoded = { version = "1.2.2" }
+foundationdb = { version = "0.10.0", features = ["embedded-fdb-include", "fdb-7_3"] }
 futures-channel = { version = "0.3.31", features = ["sink"] }
 futures-core = { version = "0.3.31" }
 futures-executor = { version = "0.3.31" }
@@ -230,7 +233,7 @@ hashbrown-986da7b5efc2b80e = { package = "hashbrown", version = "0.16.1" }
 hyper-582f2526e08bb6a0 = { package = "hyper", version = "0.14.27", features = ["client", "http1", "http2", "stream", "tcp"] }
 hyper-util = { version = "0.1.19", features = ["client-legacy", "server-auto", "service", "tracing"] }
 insta = { version = "1.45.1", features = ["json"] }
-itertools = { version = "0.10.5" }
+itertools = { version = "0.13.0" }
 jiff = { version = "0.2.18", features = ["serde"] }
 libc = { version = "0.2.180", features = ["extra_traits", "use_std"] }
 libz-sys = { version = "1.1.23", features = ["static"] }
@@ -258,6 +261,7 @@ portable-atomic = { version = "1.13.0", features = ["require-cas"] }
 postgres = { git = "https://github.com/MaterializeInc/rust-postgres", default-features = false, features = ["with-chrono-0_4"] }
 postgres-types = { git = "https://github.com/MaterializeInc/rust-postgres", default-features = false, features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
 predicates = { version = "3.1.3" }
+prettyplease = { version = "0.2.37", default-features = false, features = ["verbatim"] }
 proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
 proptest = { version = "1.9.0" }
 proptest-derive = { version = "0.7.0", default-features = false, features = ["boxed_union"] }
