--- a/src/testdrive/Cargo.toml
+++ b/src/testdrive/Cargo.toml
@@ -57,9 +57,9 @@ mz-tls-util = { path = "../tls-util" }
 parquet = { version = "57", default-features = false, features = ["arrow"] }
 postgres_array = { version = "0.11.0" }
 postgres-protocol = { version = "0.6.9" }
-prost = { version = "0.13.5", features = ["no-recursion-limit"] }
-prost-reflect = { version = "0.15.3", features = ["serde"] }
-prost-types = { version = "0.13.5" }
+prost = { version = "0.14.3", features = ["no-recursion-limit"] }
+prost-reflect = { version = "0.16.3", features = ["serde"] }
+prost-types = { version = "0.14.3" }
 rand = "0.9.2"
 rdkafka = { version = "0.29.0", features = ["cmake-build", "ssl-vendored", "libz-static", "zstd"] }
 regex = "1.12.2"
@@ -78,7 +78,8 @@ tokio = { version = "1.48.0", features = ["process"] }
 tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4", "with-serde_json-1"] }
 tokio-stream = "0.1.18"
 tokio-util = { version = "0.7.18", features = ["compat"] }
-tonic = "0.12.1"
+tonic = "0.14.2"
+tonic-prost = "0.14.2"
 url = "2.5.8"
 uuid = "1.19.0"
 walkdir = "2.5.0"
@@ -86,8 +87,8 @@ workspace-hack = { version = "0.0.0", path = "../workspace-hack", optional = tru
 
 [build-dependencies]
 mz-build-tools = { path = "../build-tools", default-features = false, features = ["protobuf-src"] }
-prost-build = "0.13.5"
-tonic-build = "0.12.3"
+prost-build = "0.14.3"
+tonic-prost-build = "0.14.2"
 
 [features]
 default = ["mz-build-tools/default", "workspace-hack"]
