Address review comments
* Move fdb testdrive to nightly.
* Extract metadata-store logic into own module.
* Integrate the tests into regular tests and use `libc::_exit` to avoid
  segfaults.

Signed-off-by: Moritz Hoffmann <mh@materialize.com>

--- a/ci/nightly/pipeline.template.yml
+++ b/ci/nightly/pipeline.template.yml
@@ -409,6 +409,20 @@ steps:
               composition: testdrive
               args: [--default-size=8, --azurite, --slow]
 
+      - id: testdrive-fdb
+        label: "Testdrive (FoundationDB)"
+        depends_on: build-aarch64
+        timeout_in_minutes: 40
+        inputs: [test/testdrive]
+        parallelism: 20
+        plugins:
+          - ./ci/plugins/mzcompose:
+              composition: testdrive
+              env:
+                - EXTERNAL_METADATA_STORE: foundationdb
+        agents:
+          queue: hetzner-aarch64-8cpu-16gb
+
       - id: testdrive-in-cloudtest
         label: "Full Testdrive in Cloudtest (K8s)"
         depends_on: build-aarch64
