--- a/deny.toml
+++ b/deny.toml
@@ -263,6 +263,8 @@ ignore = [
     "RUSTSEC-2024-0436",
     # Bincode is unmaintained, the team considers version 1.3.3 a complete version of bincode that is not in need of any updates.
     "RUSTSEC-2025-0141",
+    # mysql-async has no upgrade yet, all other uses of `lru` upgraded
+    "RUSTSEC-2026-0002",
 ]
 
 # Must be manually kept in sync with about.toml.
