Allow `options=--search_path` and fix startup
Signed-off-by: Moritz Hoffmann <mh@materialize.com>

--- a/src/foundationdb/Cargo.toml
+++ b/src/foundationdb/Cargo.toml
@@ -13,6 +13,7 @@ workspace = true
 anyhow = "1.0.100"
 foundationdb = { version = "0.10.0", default-features = false, features = ["embedded-fdb-include", "fdb-7_3"] }
 mz-ore = { path = "../ore", default-features = false}
+tracing = "0.1.44"
 workspace-hack = { version = "0.0.0", path = "../workspace-hack", optional = true }
 
 [dev-dependencies]
