Capture & replay workloads, enable as benchmark in CI (#34694)
I have put the initial recorded workloads into a separate internal
repository since I'm not sure if we want them to be public:
https://github.com/MaterializeInc/captured-workloads
Test run in CI: https://buildkite.com/materialize/nightly/builds/14885 &
https://buildkite.com/materialize/release-qualification/builds/1069
### Checklist

- [ ] This PR has adequate test coverage / QA involvement has been duly
considered. ([trigger-ci for additional test/nightly
runs](https://trigger-ci.dev.materialize.com/))
- [ ] This PR has an associated up-to-date [design
doc](https://github.com/MaterializeInc/materialize/blob/main/doc/developer/design/README.md),
is a design doc
([template](https://github.com/MaterializeInc/materialize/blob/main/doc/developer/design/00000000_template.md)),
or is sufficiently small to not require a design.
  <!-- Reference the design in the description. -->
- [ ] If this PR evolves [an existing `$T ⇔ Proto$T`
mapping](https://github.com/MaterializeInc/materialize/blob/main/doc/developer/command-and-response-binary-encoding.md)
(possibly in a backwards-incompatible way), then it is tagged with a
`T-proto` label.
- [ ] If this PR will require changes to cloud orchestration or tests,
there is a companion cloud PR to account for those changes that is
tagged with the release-blocker label
([example](https://github.com/MaterializeInc/cloud/pull/5021)).
<!-- Ask in #team-cloud on Slack if you need help preparing the cloud
PR. -->
- [ ] If this PR includes major [user-facing behavior
changes](https://github.com/MaterializeInc/materialize/blob/main/doc/developer/guide-changes.md#what-changes-require-a-release-note),
I have pinged the relevant PM to schedule a changelog post.

--- a/ci/nightly/pipeline.template.yml
+++ b/ci/nightly/pipeline.template.yml
@@ -262,6 +262,22 @@ steps:
                 - --other-tag
                 - common-ancestor
 
+      - id: workload-replay
+        label: "Workload Replay (1% initial data)"
+        depends_on: build-x86_64
+        timeout_in_minutes: 240
+        parallelism: 5
+        plugins:
+          - ./ci/plugins/mzcompose:
+              composition: workload-replay
+              run: benchmark
+              args:
+                - --factor-initial-data=0.01
+                - --compare-against
+                - common-ancestor
+        agents:
+          queue: hetzner-x86-64-dedi-16cpu-64gb
+
   - group: Kafka
     key: kafka
     steps:
